关于我们完成，增加空白布局，UI微小改动

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="aoubt_us">关于我们\n
+        我们的APP从数据获取、后台服务、APP开发以及服务器的购买、架设都是由一个人完成（也就是我），所有的付出都免费开放，希望你能喜欢，任何批评或建议都可以通过‘告诉我们’或是下方的邮件来告诉我，我们一起来完善它\n\n
+        关于版权\n
+        所有的曲谱都来自网络，无任何版权，如若涉及版权问题，请联系我们yun160308@gmail.com\n\n
+    </string>
 </resources>
