--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,7 @@
     </string>
     <string name="login">登录</string>
     <string name="logout">退出登录</string>
+    <string name="logout_info">退出登录后就无法使用收藏等功能了哟~</string>
+    <string name="weibo_login">微博登录</string>
     <string name="login_info">登录后可以使用跟多功能哦~</string>
 </resources>
