操作优化，提交本该提交的文件

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">搜谱--简简单单搜曲谱</string>
+    <string name="app_name">搜谱</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="aoubt_us">关于我们\n
